в хедер добавил модельное окно

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="site-nav__item">
               <a
                 class="site-nav__link site-nav__link--current"
-                href=""
+                href="/"
                 aria-label="Студия"
                 >Студия</a
               >
@@ -44,7 +44,7 @@
               >
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link" href="" aria-label="Контакты"
+              <a class="site-nav__link" href="/" aria-label="Контакты"
                 >Контакты</a
               >
             </li>
@@ -76,6 +76,29 @@
               +38 096 111 11 11
             </a>
           </li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <a href="./index.html" class="">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="">Портфолио</a>
+          </li>
+          <li><a href="" class="">Контакты</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="">+38 096 111 11 11</a></li>
+          <li><a href="">info@devstudio.com</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">LinkedIn</a></li>
         </ul>
       </div>
     </header>
