сверстал модельное окно в хедере

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container header__main-nav">
         <nav class="header__nav">
-          <a class="logo" href="./index.html" aria-label="Логотип">
+          <a class="logo logo__margin" href="./index.html" aria-label="Логотип">
             <span class="logo__first-half">Web</span>Studio
           </a>
 
@@ -78,7 +78,7 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="modal-nav">
         <ul>
           <li>
             <a href="./index.html" class="">Студия</a>
