--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container header__main-nav">
         <nav class="header__nav">
           <a class="logo logo__margin" href="./index.html" aria-label="Логотип">
-            <span class="logo__first-half">Web</span>Studio
+            <span class="logo__color-change">Web</span>Studio
           </a>
 
           <ul class="site-nav">
@@ -51,26 +51,26 @@
           </ul>
         </nav>
 
-        <ul class="auth-nav">
-          <li class="auth-nav__item">
+        <ul class="contact-nav">
+          <li class="contact-nav__item">
             <a
-              class="auth-nav__link"
+              class="contact-nav__link"
               href="mailto:info@devstudio.com"
               aria-label="Имейл"
             >
-              <svg class="auth-nav__icon" width="16" height="12">
+              <svg class="contact-nav__icon" width="16" height="12">
                 <use href="./images/sprite/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="auth-nav__item">
+          <li class="contact-nav__item">
             <a
-              class="auth-nav__link"
+              class="contact-nav__link"
               href="tel:(+38)096-111-11-11"
               aria-label="Телефон"
             >
-              <svg class="auth-nav__icon" width="10" height="16">
+              <svg class="contact-nav__icon" width="10" height="16">
                 <use href="./images/sprite/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -78,27 +78,47 @@
           </li>
         </ul>
       </div>
-      <div class="modal-nav">
-        <ul>
-          <li>
-            <a href="./index.html" class="">Студия</a>
+      <div class="container-modal">
+        <ul class="nav-modal">
+          <li class="nav-modal__item">
+            <a
+              href="./index.html"
+              class="nav-modal__link nav-modal__link--current"
+              >Студия</a
+            >
           </li>
-          <li>
-            <a href="./portfolio.html" class="">Портфолио</a>
+          <li class="nav-modal__item">
+            <a href="./portfolio.html" class="nav-modal__link">Портфолио</a>
           </li>
-          <li><a href="" class="">Контакты</a></li>
+          <li class="nav-modal__item">
+            <a href="" class="nav-modal__link">Контакты</a>
+          </li>
         </ul>
 
-        <ul>
-          <li><a href="">+38 096 111 11 11</a></li>
-          <li><a href="">info@devstudio.com</a></li>
+        <ul class="contact-modal">
+          <li class="contact-modal__item">
+            <a class="contact-modal__link contact-modal__link--change" href=""
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="contact-modal__item">
+            <a class="contact-modal__link" href="">info@devstudio.com</a>
+          </li>
         </ul>
 
-        <ul>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Facebook</a></li>
-          <li><a href="">LinkedIn</a></li>
+        <ul class="networks-modal">
+          <li class="networks-modal__item">
+            <a class="networks-modal__link" href="">Instagram</a>
+          </li>
+          <li class="networks-modal__item">
+            <a class="networks-modal__link" href="">Twitter</a>
+          </li>
+          <li class="networks-modal__item">
+            <a class="networks-modal__link" href="">Facebook</a>
+          </li>
+          <li class="networks-modal__item">
+            <a class="networks-modal__link" href="">LinkedIn</a>
+          </li>
         </ul>
       </div>
     </header>
