--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           type="button"
           class="menu-button"
           aria-expanded="false"
-          aria-controls="container-modal"
+          aria-controls="menu-container"
           data-menu-button
         >
           <svg
@@ -101,46 +101,46 @@
           </svg>
         </button>
 
-        <div class="container-modal" id="container-modal" data-menu>
-          <ul class="nav-modal">
-            <li class="nav-modal__item">
+        <div class="menu-container" id="menu-container" data-menu>
+          <ul class="menu-nav">
+            <li class="menu-nav__item">
               <a
                 href="./index.html"
-                class="nav-modal__link nav-modal__link--current"
+                class="menu-nav__link menu-nav__link--current"
                 >Студия</a
               >
             </li>
-            <li class="nav-modal__item">
-              <a href="./portfolio.html" class="nav-modal__link">Портфолио</a>
+            <li class="menu-nav__item">
+              <a href="./portfolio.html" class="menu-nav__link">Портфолио</a>
             </li>
-            <li class="nav-modal__item">
-              <a href="" class="nav-modal__link">Контакты</a>
+            <li class="menu-nav__item">
+              <a href="/" class="menu-nav__link">Контакты</a>
             </li>
           </ul>
 
-          <ul class="contact-modal">
-            <li class="contact-modal__item">
-              <a class="contact-modal__link contact-modal__link--change" href=""
+          <ul class="menu-contact">
+            <li class="menu-contact__item">
+              <a class="menu-contact__link menu-contact__link--change" href=""
                 >+38 096 111 11 11</a
               >
             </li>
-            <li class="contact-modal__item">
-              <a class="contact-modal__link" href="">info@devstudio.com</a>
+            <li class="menu-contact__item">
+              <a class="menu-contact__link" href="">info@devstudio.com</a>
             </li>
           </ul>
 
-          <ul class="networks-modal">
-            <li class="networks-modal__item">
-              <a class="networks-modal__link" href="">Instagram</a>
+          <ul class="menu-networks">
+            <li class="menu-networks__item">
+              <a class="menu-networks__link" href="">Instagram</a>
             </li>
-            <li class="networks-modal__item">
-              <a class="networks-modal__link" href="">Twitter</a>
+            <li class="menu-networks__item">
+              <a class="menu-networks__link" href="">Twitter</a>
             </li>
-            <li class="networks-modal__item">
-              <a class="networks-modal__link" href="">Facebook</a>
+            <li class="menu-networks__item">
+              <a class="menu-networks__link" href="">Facebook</a>
             </li>
-            <li class="networks-modal__item">
-              <a class="networks-modal__link" href="">LinkedIn</a>
+            <li class="menu-networks__item">
+              <a class="menu-networks__link" href="">LinkedIn</a>
             </li>
           </ul>
         </div>
@@ -149,7 +149,7 @@
 
     <main>
       <!--Герой-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="hero__overlay">
           <h1 class="hero__text">
             Эффективные решения для <br />
@@ -164,10 +164,10 @@
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!--Преимущества-->
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="advantages__hide-title">Преимущества</h2>
           <ul class="advantages__card-set">
@@ -221,10 +221,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Чем мы занимаемся-->
-      <section class="classes">
+      <!-- <section class="classes">
         <div class="container">
           <h2 class="section-title">Чем мы зпнимаемся</h2>
           <ul class="classes__card-set">
@@ -260,16 +260,16 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Наша команда-->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team__card-set">
-            <li class="team__item">
-              <!-- Карточка -->
-              <article class="card">
+            <li class="team__item"> -->
+      <!-- Карточка -->
+      <!-- <article class="card">
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -308,9 +308,9 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item">
-              <!-- Карточка -->
-              <article>
+            <li class="team__item"> -->
+      <!-- Карточка -->
+      <!-- <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -349,9 +349,9 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item">
-              <!-- Карточка -->
-              <article>
+            <li class="team__item"> -->
+      <!-- Карточка -->
+      <!-- <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -390,9 +390,9 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item">
-              <!-- Карточка -->
-              <article>
+            <li class="team__item"> -->
+      <!-- Карточка -->
+      <!-- <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -433,10 +433,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--Постоянные клиенты-->
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <a class="clients__link" href="" aria-label="Логотип">
@@ -470,11 +470,11 @@
             </svg>
           </a>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--Подвал-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__container">
           <div class="address-block">
@@ -558,10 +558,10 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Модельное окно  -->
-    <div class="backdrop backdrop--is-hidden" data-modal>
+    <!-- <div class="backdrop backdrop--is-hidden" data-modal>
       <div class="modal">
         <button class="modal__button" data-modal-close>
           <svg class="modal__icon-close" width="11" height="11">
@@ -638,7 +638,7 @@
           </button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <!-- Скрипт модельного окна -->
     <script src="./js/menu.js"></script>
