сделал секции - hero, advantages, work

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <main>
       <!--Герой-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="hero__overlay">
           <h1 class="hero__text">
             Эффективные решения для <br />
@@ -164,12 +164,12 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!--Преимущества-->
-      <!-- <section class="advantages">
+      <section class="advantages">
         <div class="container">
-          <h2 class="advantages__hide-title">Преимущества</h2>
+          <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="advantages__card-set">
             <li class="advantages__item">
               <div class="advantages__icon-thumb">
@@ -221,10 +221,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Чем мы занимаемся-->
-      <!-- <section class="classes">
+      <section class="classes">
         <div class="container">
           <h2 class="section-title">Чем мы зпнимаемся</h2>
           <ul class="classes__card-set">
@@ -260,7 +260,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Наша команда-->
       <!-- <section class="team">
