--- a/index.html
+++ b/index.html
@@ -263,20 +263,20 @@
       </section>
 
       <!--Наша команда-->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team__card-set">
-            <li class="team__item"> -->
-      <!-- Карточка -->
-      <!-- <article class="card">
+            <li class="team__item">
+              <!-- Карточка -->
+              <article class="card">
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
                       <img
+                        class="card__photo"
                         src="./images/team/img1.jpg"
                         alt="фотография Игоря Демьяненко"
-                        width="270"
                       />
                     </div>
                     <div class="card__back">
@@ -308,16 +308,16 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item"> -->
-      <!-- Карточка -->
-      <!-- <article>
+            <li class="team__item">
+              <!-- Карточка -->
+              <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
                       <img
+                        class="card__photo"
                         src="./images/team/img2.jpg"
                         alt="фотография Ольги Репиной"
-                        width="270"
                       />
                     </div>
                     <div class="card__back">
@@ -349,16 +349,16 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item"> -->
-      <!-- Карточка -->
-      <!-- <article>
+            <li class="team__item">
+              <!-- Карточка -->
+              <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
                       <img
+                        class="card__photo"
                         src="./images/team/img3.jpg"
                         alt="Фотография Николая Тарарсова"
-                        width="270"
                       />
                     </div>
                     <div class="card__back">
@@ -390,16 +390,16 @@
                 </svg>
               </a>
             </li>
-            <li class="team__item"> -->
-      <!-- Карточка -->
-      <!-- <article>
+            <li class="team__item">
+              <!-- Карточка -->
+              <article>
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
                       <img
+                        class="card__photo"
                         src="./images/team/img4.jpg"
                         alt="фотография Михаила Ермакова"
-                        width="270"
                       />
                     </div>
                     <div class="card__back">
@@ -433,7 +433,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--Постоянные клиенты-->
       <!-- <section class="clients">
