--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             </li>
             <li class="team__item">
               <!-- Карточка -->
-              <article>
+              <article class="card">
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -351,7 +351,7 @@
             </li>
             <li class="team__item">
               <!-- Карточка -->
-              <article>
+              <article class="card">
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
@@ -392,7 +392,7 @@
             </li>
             <li class="team__item">
               <!-- Карточка -->
-              <article>
+              <article class="card">
                 <div class="card__scene">
                   <div class="card__img">
                     <div class="card__face">
