доделал секцию постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -436,41 +436,67 @@
       </section>
 
       <!--Постоянные клиенты-->
-      <!-- <section class="clients">
+      <section class="clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-first-client"></use>
-            </svg>
-          </a>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-second-client"></use>
-            </svg>
-          </a>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-third-client"></use>
-            </svg>
-          </a>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-fourth-client"></use>
-            </svg>
-          </a>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-fifth-client"></use>
-            </svg>
-          </a>
-          <a class="clients__link" href="" aria-label="Логотип">
-            <svg class="clients__logo">
-              <use href="./images/sprite/sprite.svg#icon-sixth-client"></use>
-            </svg>
-          </a>
+          <ul class="clients__card-set">
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-first-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-second-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-third-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-fourth-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-fifth-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a class="clients__link" href="" aria-label="Логотип">
+                <svg class="clients__logo">
+                  <use
+                    href="./images/sprite/sprite.svg#icon-sixth-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--Подвал-->
