--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
     </main>
 
     <!--Подвал-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__container">
           <div class="address-block">
@@ -509,7 +509,7 @@
               href="/index.html"
               aria-label="Логотип"
             >
-              <span class="logo__first-half">Web</span>Studio
+              <span class="logo__color-change">Web</span>Studio
             </a>
             <address class="address">
               <ul class="address__list">
@@ -584,7 +584,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Модельное окно  -->
     <!-- <div class="backdrop backdrop--is-hidden" data-modal>
