откорректировал footer, недооформил  backdrop

--- a/index.html
+++ b/index.html
@@ -534,32 +534,38 @@
           </div>
           <div class="networks-block">
             <b class="networks-block__title">Присоединяйтесь</b>
-            <a class="networks-block__link" href="" aria-label="Инстаграм">
-              <svg class="networks-block__icon">
-                <use
-                  href="./images/sprite/sprite.svg#icon-footer-instagram"
-                ></use>
-              </svg>
-            </a>
-            <a class="networks-block__link" href="" aria-label="Твиттер">
-              <svg class="networks-block__icon">
-                <use href="./images/sprite/sprite.svg#icon-footer-Vector"></use>
-              </svg>
-            </a>
-            <a class="networks-block__link" href="" aria-label="Фейсбук">
-              <svg class="networks-block__icon">
-                <use
-                  href="./images/sprite/sprite.svg#icon-footer-facebook"
-                ></use>
-              </svg>
-            </a>
-            <a class="networks-block__link" href="" aria-label="Линкедин">
-              <svg class="networks-block__icon">
-                <use
-                  href="./images/sprite/sprite.svg#icon-footer-linkedin"
-                ></use>
-              </svg>
-            </a>
+            <ul class="networks-block__list">
+              <li class="networks-block__item">
+                <a class="networks-block__link" href="" aria-label="Инстаграм">
+                  <svg class="networks-block__icon">
+                    <use
+                      href="./images/sprite/sprite.svg#icon-footer-instagram"
+                    ></use>
+                  </svg>
+                </a>
+                <a class="networks-block__link" href="" aria-label="Твиттер">
+                  <svg class="networks-block__icon">
+                    <use
+                      href="./images/sprite/sprite.svg#icon-footer-Vector"
+                    ></use>
+                  </svg>
+                </a>
+                <a class="networks-block__link" href="" aria-label="Фейсбук">
+                  <svg class="networks-block__icon">
+                    <use
+                      href="./images/sprite/sprite.svg#icon-footer-facebook"
+                    ></use>
+                  </svg>
+                </a>
+                <a class="networks-block__link" href="" aria-label="Линкедин">
+                  <svg class="networks-block__icon">
+                    <use
+                      href="./images/sprite/sprite.svg#icon-footer-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           <div class="newsletter-block">
             <b class="newsletter-block__title">Подпишитесь на рассылку</b>
@@ -587,7 +593,7 @@
     </footer>
 
     <!-- Модельное окно  -->
-    <!-- <div class="backdrop backdrop--is-hidden" data-modal>
+    <div class="backdrop backdrop--is-hidden" data-modal>
       <div class="modal">
         <button class="modal__button" data-modal-close>
           <svg class="modal__icon-close" width="11" height="11">
@@ -664,7 +670,7 @@
           </button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- Скрипт модельного окна -->
     <script src="./js/menu.js"></script>
