доделал backdrop и вынес в отдельные файлы переиспользуемые  компоненты

--- a/index.html
+++ b/index.html
@@ -287,26 +287,46 @@
                 <h3 class="card__title">Игорь Демьяненко</h3>
                 <p class="card__speciality">Product Designer</p>
               </article>
-              <a class="team__link" href="" aria-label="Инстаграм">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Твиттер">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-Group"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Фейсбук">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Линкедин">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <ul class="networks-block__list">
+                <li class="networks-block__item">
+                  <a
+                    class="networks-block__link"
+                    href=""
+                    aria-label="Инстаграм"
+                  >
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Твиттер">
+                    <svg class="networks-block__icon">
+                      <use href="./images/sprite/sprite.svg#icon-Group"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Фейсбук">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Линкедин">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <!-- Карточка -->
@@ -328,26 +348,46 @@
                 <h3 class="card__title">Ольга Репина</h3>
                 <p class="card__speciality">Frontend Developer</p>
               </article>
-              <a class="team__link" href="" aria-label="Инстаграм">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Твиттер">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-Group"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Фейсбук">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Линкедин">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <ul class="networks-block__list">
+                <li class="networks-block__item">
+                  <a
+                    class="networks-block__link"
+                    href=""
+                    aria-label="Инстаграм"
+                  >
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Твиттер">
+                    <svg class="networks-block__icon">
+                      <use href="./images/sprite/sprite.svg#icon-Group"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Фейсбук">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Линкедин">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <!-- Карточка -->
@@ -369,26 +409,46 @@
                 <h3 class="card__title">Николай Тарасов</h3>
                 <p class="card__speciality">Marketing</p>
               </article>
-              <a class="team__link" href="" aria-label="Инстаграм">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Твиттер">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-Group"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Фейсбук">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Линкедин">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <ul class="networks-block__list">
+                <li class="networks-block__item">
+                  <a
+                    class="networks-block__link"
+                    href=""
+                    aria-label="Инстаграм"
+                  >
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Твиттер">
+                    <svg class="networks-block__icon">
+                      <use href="./images/sprite/sprite.svg#icon-Group"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Фейсбук">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Линкедин">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__item">
               <!-- Карточка -->
@@ -410,26 +470,46 @@
                 <h3 class="card__title">Михаил Ермаков</h3>
                 <p class="card__speciality">UI Designer</p>
               </article>
-              <a class="team__link" href="" aria-label="Инстаграм">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Твиттер">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-Group"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Фейсбук">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-              <a class="team__link" href="" aria-label="Линкедин">
-                <svg class="team__icon-network">
-                  <use href="./images/sprite/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+              <ul class="networks-block__list">
+                <li class="networks-block__item">
+                  <a
+                    class="networks-block__link"
+                    href=""
+                    aria-label="Инстаграм"
+                  >
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Твиттер">
+                    <svg class="networks-block__icon">
+                      <use href="./images/sprite/sprite.svg#icon-Group"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Фейсбук">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-facebook"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-block__item">
+                  <a class="networks-block__link" href="" aria-label="Линкедин">
+                    <svg class="networks-block__icon">
+                      <use
+                        href="./images/sprite/sprite.svg#icon-linkedin"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -505,7 +585,7 @@
         <div class="footer__container">
           <div class="address-block">
             <a
-              class="logo footer__logo"
+              class="logo recolor__logo"
               href="/index.html"
               aria-label="Логотип"
             >
@@ -534,34 +614,49 @@
           </div>
           <div class="networks-block">
             <b class="networks-block__title">Присоединяйтесь</b>
+
             <ul class="networks-block__list">
               <li class="networks-block__item">
-                <a class="networks-block__link" href="" aria-label="Инстаграм">
+                <a
+                  class="networks-block__link recolor__link"
+                  href=""
+                  aria-label="Инстаграм"
+                >
                   <svg class="networks-block__icon">
-                    <use
-                      href="./images/sprite/sprite.svg#icon-footer-instagram"
-                    ></use>
+                    <use href="./images/sprite/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
-                <a class="networks-block__link" href="" aria-label="Твиттер">
+              </li>
+              <li class="networks-block__item">
+                <a
+                  class="networks-block__link recolor__link"
+                  href=""
+                  aria-label="Твиттер"
+                >
                   <svg class="networks-block__icon">
-                    <use
-                      href="./images/sprite/sprite.svg#icon-footer-Vector"
-                    ></use>
+                    <use href="./images/sprite/sprite.svg#icon-Group"></use>
                   </svg>
                 </a>
-                <a class="networks-block__link" href="" aria-label="Фейсбук">
+              </li>
+              <li class="networks-block__item">
+                <a
+                  class="networks-block__link recolor__link"
+                  href=""
+                  aria-label="Фейсбук"
+                >
                   <svg class="networks-block__icon">
-                    <use
-                      href="./images/sprite/sprite.svg#icon-footer-facebook"
-                    ></use>
+                    <use href="./images/sprite/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
-                <a class="networks-block__link" href="" aria-label="Линкедин">
+              </li>
+              <li class="networks-block__item">
+                <a
+                  class="networks-block__link recolor__link"
+                  href=""
+                  aria-label="Линкедин"
+                >
                   <svg class="networks-block__icon">
-                    <use
-                      href="./images/sprite/sprite.svg#icon-footer-linkedin"
-                    ></use>
+                    <use href="./images/sprite/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -650,15 +745,19 @@
           </label>
 
           <label class="service-form__field-checkbox">
-            <input
-              class="service-form__agreement"
-              type="checkbox"
-              name="agreement"
-              value="agreement"
-            />
-            <span class="service-form__chackbox-icon"></span>
-            Соглашаюсь с рассылкой и прнинимаю
-            <a class="service-form__agreement-link" href="">Условия договора</a>
+            <div class="service-form__checkbox-view">
+              <input
+                class="service-form__agreement"
+                type="checkbox"
+                name="agreement"
+                value="agreement"
+              />
+              <span class="service-form__chackbox-icon"></span>
+              Соглашаюсь с рассылкой и прнинимаю
+              <a class="service-form__agreement-link" href=""
+                >Условия договора</a
+              >
+            </div>
           </label>
 
           <button
